"Fixed" scrollbar in electron. Broke it everywhere else!

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -65,7 +65,6 @@ td.message {
 
 #sendMessage {
     width: 100%;
-    height: 35px;
     resize: none;
 }
 
